syntax = "proto3";

package com.xsearch.query;

option java_multiple_files = true;
option java_package = "com.xsearch.query.lib";
option java_outer_classname = "QueryProto";


service QueryService {
  rpc query (QueryRequest) returns (QueryReply);
}

message QueryRequest {
  repeated string term = 1;
  int32 resultSize = 2;
}

message QueryReply {
  string message = 1;
  repeated string id = 2;
  repeated double score = 3;
  repeated int32 offset = 4;
}