syntax = "proto3";

package com.xsearch.article;

option java_multiple_files = true;
option java_package = "com.xsearch.article.lib";
option java_outer_classname = "ArticleProto";


service ArticleService {
  rpc PutArticle (PutArticleRequest) returns (PutArticleReply);
  rpc GetArticle (GetArticleRequest) returns (GetArticleReply);
}

message PutArticleRequest {
  string id = 1;
  int32 segment = 2;
  int32 updateTime = 3;
  string url = 4;
  string title = 5;
  string content = 6;
}

message PutArticleReply {
  string message = 1;
}

message GetArticleRequest {
  string id = 1;
}

message GetArticleReply {
  string id = 1;
  int32 segment = 2;
  int32 updateTime = 3;
  string url = 4;
  string title = 5;
  string content = 6;
}